# RenderAM

./: CMakeLists.txt  README.md  fmp
src/: Application.hpp  Coords3f.hpp  DecartVector.hpp  Main.cpp  Material.hpp  Matrices.hpp  Mesh.hpp  Renderer.hpp  Stb_image.h  Texture.hpp  Uniform.hpp
